--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ body {
 header {
   width: 100%;
   height: 100vh;
-  background: url(./images/1.jpeg) no-repeat;
+  background: url(./images/1.JPEG) no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
